--- a/src/components/styles/Leaderboard.css
+++ b/src/components/styles/Leaderboard.css
@@ -1,7 +1,11 @@
 .leaderboard {
   display: grid;
   margin-top: 10px;
+
   width: clamp(220px, 75vw, 500px);
+
+  overflow-y: scroll;
+  overflow-x: hidden;
 
   .user-wrapper {
     display: grid;
